# lppn

./: README.md  pyproject.toml
.github/workflows/: CD.yaml  CI.yaml  publish.yaml
src/lppn/: __init__.py  __main__.py  cli.py  lppn.py
tests/: test_cli.py  test_lppn.py
