# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lppn"
version = "0.1.0"
description = "Print the latest Python patch number of a given major and minor version"
readme = "README.md"
authors = [{ name = "President Not Sure", email = "144360653+president-not-sure@users.noreply.github.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: DevOps",
]
keywords = ["get", "latest", "python", "patch", "version"]
dependencies = ["requests >= 2.32.3"]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/president-not-sure/lppn"

[project.scripts]
lppn = "lppn.__main__:main"

